--- a/css/projects.css
+++ b/css/projects.css
@@ -13,7 +13,7 @@
 .row {
   height: 180px;
   padding: 60px;
-  margin: 0 -10px;
+  margin: 0 10px;
 }
 
 /* clear float */
